--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             width: 100%;
             bottom: 0;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -81,6 +85,8 @@
             <article>
                 <h2>博客文章标题</h2>
                 <p>这是博客文章的内容。你可以在这里写下你的心情、想法、经历等等。</p>
+                <img src="http://xxxx.com/1.png" alt="图片1">
+                <img src="../image/1.png" alt="图片2">
             </article>
             <article>
                 <h2>另一个博客文章标题</h2>
