--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人博客</title>
+    <title>刘林的博客</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -83,9 +83,9 @@
     <div class="container">
         <section id="main">
             <article>
-                <h2>博客文章标题</h2>
-                <p>这是博客文章的内容。你可以在这里写下你的心情、想法、经历等等。</p>
-                <img src="http://xxxx.com/1.png" alt="图片1">
+                <h2>绝对路径图片</h2>
+                <p>文章内容</p>
+                <img src="https://th.bing.com/th/id/OIP.7KW5GT7NQ8yUGlBbCHEm0gHaNK?rs=1&pid=ImgDetMain" alt="图片1">
                 <img src="../image/1.png" alt="图片2">
             </article>
             <article>
