--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
                 <img src="../image/1.png" alt="图片2">
             </article>
             <article>
-                <h2>另一个博客文章标题</h2>
-                <p>这是另一篇博客文章的内容。</p>
+                <h2></h2>
+                <p></p>
             </article>
         </section>
 
         <aside id="sidebar">
             <h3>关于我</h3>
-            <p>这里是一些关于你的简介，兴趣爱好，或者其他你想分享的个人信息。</p>
-            <h3>最新文章</h3>
+            <p></p>
+            <h3></h3>
             <ul>
-                <li><a href="#">文章标题1</a></li>
-                <li><a href="#">文章标题2</a></li>
-                <li><a href="#">文章标题3</a></li>
+                <li><a href="#">文章1</a></li>
+                <li><a href="#">文章2</a></li>
+                <li><a href="#">文章3</a></li>
             </ul>
         </aside>
     </div>
