--- a/index.html
+++ b/index.html
@@ -84,30 +84,23 @@
         <section id="main">
             <article>
                 <h2>绝对路径图片</h2>
-                <p>文章内容</p>
+                <p></p>
                 <img src="https://th.bing.com/th/id/OIP.7KW5GT7NQ8yUGlBbCHEm0gHaNK?rs=1&pid=ImgDetMain" alt="图片1">
-                <img src="../image/1.png" alt="图片2">
             </article>
             <article>
-                <h2></h2>
+                <h2>相对路径图片</h2>
                 <p></p>
+                <img src="/image/1.png" alt="图片2">
             </article>
         </section>
 
         <aside id="sidebar">
-            <h3>关于我</h3>
-            <p></p>
-            <h3></h3>
-            <ul>
-                <li><a href="#">文章1</a></li>
-                <li><a href="#">文章2</a></li>
-                <li><a href="#">文章3</a></li>
-            </ul>
+          
         </aside>
     </div>
 
     <footer>
-        <p>版权所有 &copy; 2024 你的名字</p>
+        <p>版权所有 &copy; 2024 刘林</p>
     </footer>
 </body>
 </html>
