--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <article>
                 <h2>相对路径图片</h2>
                 <p></p>
-                <img src="/image/1.png" alt="图片2">
+                <img src="R.png" alt="图片2">
             </article>
         </section>
 
