--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <article>
                 <h2>相对路径图片</h2>
                 <p></p>
-                <img src="https://github.com/llbackhome/liulin.io/blob/main/R.jpg" alt="图片2">
+                <img src="https://th.bing.com/th?id=OIP.VzhOTC3SVqdVV48AhF5grwHaFS&w=295&h=211&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2" alt="图片2">
             </article>
         </section>
 
