--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <article>
                 <h2>绝对路径图片</h2>
                 <p></p>
-                <img src="https://th.bing.com/th/id/OIP.7KW5GT7NQ8yUGlBbCHEm0gHaNK?rs=1&pid=ImgDetMain" alt="图片1">
+                <img src="https://th.bing.com/th?id=OIP.OhUOhPbzdELTIt6QY9fV0AHaEo&w=316&h=197&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2" alt="图片1">
             </article>
             <article>
                 <h2>相对路径图片</h2>
